# IT-Helpdesk-Agent

./: .env.example  .gitignore  README.md  agentic_ai_take_home_candidate_instructions_v20260421_01.html  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: bugfix-clarify-state-sticky.md  demo-script.md
specs/001-it-helpdesk-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-it-helpdesk-agent/checklists/: requirements.md
specs/001-it-helpdesk-agent/contracts/: agent-tools.md  cli-api.md
src/: __init__.py  config.py  logging_config.py  paths.py
src/agent/: access_handlers.py  complex_handlers.py  escalation.py  graph.py  nodes.py  password_handlers.py  prompts.py  software_handlers.py  state.py  vpn_handlers.py
src/api/: __init__.py  server.py
src/cli/: main.py
src/data/history/: hist-pipeline-jenkins.json  hist-salesforce-chicago.json  records.json
src/data/kb/: kb-okta-reset.md  (+6 more)
src/models/: schemas.py
src/tools/: __init__.py  base.py  history_search.py  kb_format.py  kb_search.py  policy_check.py  registry.py  status_check.py  user_lookup.py
tests/eval/: runner.py  test_eval_runner.py
tests/integration/: test_us1_okta.py  test_us2_salesforce.py  test_us3_vpn.py  test_us4_access.py  test_us5_pipeline.py
tests/unit/: test_agent_foundation.py  test_kb_format.py  test_setup.py  test_tools.py
(+12 files in other folders)
