[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "it-helpdesk-agent"
version = "0.1.0"
description = "Agentic AI IT helpdesk agent for employee IT support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

# CLI entry point added in Phase 3 (US1)
[project.scripts]
it-agent = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "eval: evaluation conversation scenarios (may call LLM API)",
    "integration: agent integration tests (may call LLM API)",
    "unit: fast unit tests without external API calls",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
